Stop menu name edit button from wrapping
The edit button was wrapping at mobile widths and at 660px to 706px. Mobile is
easy: add a breakpoint. The other one was tougher. The solution was to change
the width of the element to a calc() value that provided space for the button.

This was originally avoided in the pre-oss repo commit 0ef153c because
`text-overflow: ellipsis` did not support `width: calc()`. Browsers appear to
have improved since then.

--- a/assets/stylesheets/sections/_menus.scss
+++ b/assets/stylesheets/sections/_menus.scss
@@ -194,10 +194,13 @@
 		span {
 			display: block;
 			float: left;
-			max-width: 90%; /* should be less to avoid a bug on touch + <a> tag that auto-closes the area, but ellipsis wouldn't work */
+			max-width: calc(100% - 20px); /* should be less to avoid a bug on touch + <a> tag that auto-closes the area, but ellipsis wouldn't work */
 			text-overflow: ellipsis;
 			overflow: hidden;
 			white-space: nowrap;
+			@include breakpoint( "<480px" ) {
+				width: 100%;
+			}
 		}
 
 		a {
@@ -207,6 +210,10 @@
 				@include noticon( '\f411', 16px );
 				color: darken( $gray, 10% );
 				vertical-align: baseline;
+			}
+
+			@include breakpoint( "<480px" ) {
+				display: none;
 			}
 		}
 	}
